# rusty-kernel

./: Cargo.toml  LICENSE  Makefile  README.md  rust-toolchain.toml
.devcontainer/: Dockerfile  devcontainer.json
specs/: aarch64-rpi4.json  armv7a-microzed.json
src/: bsp.rs  main.rs  panic_wait.rs
src/_arch/aarch64/: cpu.rs
src/_arch/aarch64/cpu/: boot.rs  boot.s
src/bsp/microzed/: kernel.ld
src/bsp/raspberrypi/: kernel.ld
src/cpu/: boot.rs
